# automatic-test-runner

./: AutomaticTestRunner.txt  CMakeLists.txt  README.md  tags
Monitor/: BashCommand.cpp  BashCommand.h  CMakeLists.txt  Compiler.cpp  Compiler.h  Monitor.cpp  Monitor.h  Notifier.cpp  Notifier.h  Parser.cpp  Parser.h  TestRunner.cpp  TestRunner.h  main.cpp  tags
TestRunner/: CMakeLists.txt  CliPrinter.cpp  CliPrinter.h  JsonPrinter.cpp  Printer.h  TestSuite.cpp  TestSuite.h  TestsResults.cpp  TestsResults.h  UnitTestInfo.cpp  UnitTestInfo.h  main.cpp
src/: BashCommand.h  Compiler.cpp  Compiler.h  Monitor.cpp  Monitor.h  Notifier.cpp  Notifier.h  Parser.cpp  SampleTestCase.h  Test.cpp  Test.h  TestSuite.cpp  TestSuite.h  UnitTestInfo.cpp  UnitTestInfo.h  main.cpp  tags
src/display/: TableWidget.cpp  TableWidget.h
src/monitor/: .BashCommand.cpp.swp  .BashCommand.h.swp  .Compiler.cpp.swp  .Compiler.h.swp  .Monitor.cpp.swp  .Monitor.h.swp  .Notifier.cpp.swp  .Notifier.h.swp  .Parser.cpp.swp  .Parser.h.swp  .TestRunner.cpp.swp  .TestRunner.h.swp  .main.cpp.swp  BashCommand.cpp  BashCommand.h  Compiler.cpp  Compiler.h  Monitor.cpp  Monitor.h  Notifier.cpp  Notifier.h  Parser.cpp  Parser.h  TestRunner.cpp  TestRunner.h  main.cpp  tags
src/testrunner/: .TestSuite.cpp.swp  .TestSuite.h.swp  .TestsResults.cpp.swp  .TestsResults.h.swp  (+10 more)
test/: MockCompiler.h  SampleTestCase.cpp  SampleTestCase.h  TersePrinter.h  TestBashCommand.h  TestCompiler.h  TestMonitor.h  TestNotifier.h  TestTest.h  TestTestSuite.h  main.cpp
testAutomaticTestRunner/: TersePrinter.h  main.cpp
(+12 files in other folders)
